/text-set/:id/join-links
returns all JoinLink's in TextSet.

Besides, I fixed an api.yaml for invalid identifiers [all_lower instead of camel case]
